upload avatar, fixes and update docs
