# internal/handler/user.go
@@ -5,6 +5,7 @@ import (
 	"github.com/blazee5/finance-tracker/lib/response"
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
+	"os"
 )
 
 // @Summary Get User
@@ -14,7 +15,7 @@ import (
 // @Accept  json
 // @Produce  json
 // @Success 200 {string} string	"ok"
-// @Failure 500 {string} string "internal server error"
+// @Failure 500 {string} string "server error"
 // @Router /api/user [post]
 func (h *Handler) GetUser(c *fiber.Ctx) error {
 	userId := c.Locals("userId").(string)
@@ -43,7 +44,7 @@ func (h *Handler) GetUser(c *fiber.Ctx) error {
 // @Produce  json
 // @Success 200 {string} string	"ok"
 // @Failure 400 {string} string "bad request"
-// @Failure 500 {string} string "internal server error"
+// @Failure 500 {string} string "server error"
 // @Router /api/user [put]
 func (h *Handler) UpdateUser(c *fiber.Ctx) error {
 	var input domain.UpdateUserRequest
@@ -74,16 +75,46 @@ func (h *Handler) UpdateUser(c *fiber.Ctx) error {
 	return c.SendStatus(fiber.StatusOK)
 }
 
-//func (h *Handler) UploadAvatar(c *fiber.Ctx) error {
-//	userId := c.Locals("userId").(string)
-//
-//	file, err := c.FormFile("file")
-//
-//	if err != nil {
-//		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-//			"message": "file is required",
-//		})
-//	}
-//
-//	err := h.service.User
-//}
+// @Summary Upload avatar
+// @Tags user
+// @Description Upload avatar
+// @ID upload-avatar
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} string	"ok"
+// @Failure 400 {string} string "bad request"
+// @Failure 500 {string} string "server error"
+// @Router /api/user/avatar [post]
+func (h *Handler) UploadAvatar(c *fiber.Ctx) error {
+	userId := c.Locals("userId").(string)
+
+	file, err := c.FormFile("file")
+
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "file is required",
+		})
+	}
+
+	if _, err := os.Stat("public"); os.IsNotExist(err) {
+		err = os.Mkdir("public", os.ModePerm)
+	}
+
+	if err := c.SaveFile(file, "public/"+file.Filename); err != nil {
+		h.log.Infof("error while save file: %v", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"message": "error save file",
+		})
+	}
+
+	err = h.service.User.UploadAvatar(c.Context(), userId, file.Filename)
+
+	if err != nil {
+		h.log.Infof("error while upload avatar: %v", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"message": "server error",
+		})
+	}
+
+	return c.SendStatus(fiber.StatusOK)
+}
